# simpleApi

./: .gitignore  Procfile  README.md  pyproject.toml
simpleapi/: __init__.py
simpleapi/api/: schemas.py
simpleapi/database/: crud.py  models.py  setup.py  testsetup.py
simpleapi/tests/: test_app.py
