[tool.poetry]
name = "simpleApi"
version = "0.1.0"
description = ""
authors = ["noFrostoo <nofrost1a@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
pydantic = "^1.8.1"
SQLAlchemy = "^1.4.11"
psycopg2 = "^2.8.6 "
python-multipart = "^0.0.5" 
python-jose = "^3.2.0"
passlib = "^1.7.4"
pytest = '^6.2.4'
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
uvicorn = "^0.13.4"

[tool.poetry.scripts]
run = "simpleapi:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

